<resources>
    <string name="app_name">ServiceApp</string>
    <string name="Login">login</string>
    <string name="SignUp">New User?</string>
    <string name="welcome_in_deliveryboy">Welcome in DeliveryBoy</string>
    <string name="frontimage">frontimage</string>
    <string name="Submit">Submit</string>
    <string name="Full_Name">Full Name</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Age">Age</string>
    <string name="Customer">Customer</string>
    <string name="Shopkeeper">Shopkeeper</string>
    <string name="Address">Address - Location of House or Shop</string>
    <string name="Registration_Successful">Registration_Successful</string>
    <string name="Email_or_Phone">Email or Phone</string>
    <string name="OTP">OTP</string>
    <string name="Home_Page">Home_Page</string>
    <string name="Sendotp">Send Otp</string>
    <string name="Register">Register</string>
    <string name="loginpage">loginpage</string>
    <string name="registerpage">registerpage</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="one_time_password">One Time Password</string>
    <string name="customdialog">customdialog</string>
    <string name="showtext">TextView</string>
    <string name="Create_Account">Create Account</string>
    <string name="shop1image">shop1image</string>
    <string name="Quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="product">Product</string>
    <string name="shopdetail_shopimg">shopdetail_shopimg</string>
    <string name="verifyOtp">verifyOtp</string>
</resources>