<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03AEFB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:text="@string/Login"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276" />

    <EditText
        android:id="@+id/loginemail"
        android:layout_width="205dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/Email_or_Phone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:onClick="@string/Home_Page"
        android:text="@string/Login"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginemail"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/login_signup"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginBottom="92dp"
        android:onClick="@string/registerpage"
        android:text="@string/SignUp"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        app:layout_constraintVertical_bias="0.276" />

    <RadioGroup
        android:id="@+id/loginradiogrp"
        android:layout_width="330dp"
        android:layout_height="79dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginemail">

        <RadioButton
            android:id="@+id/loginradioshopkeeper"
            android:layout_width="195dp"
            android:layout_height="69dp"
            android:text="@string/Shopkeeper"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/loginradio_customer"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:text="@string/Customer"
            android:textStyle="bold" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/loginotp"
        android:layout_width="68dp"
        android:layout_height="59dp"
        android:contentDescription="TODO"
        android:onClick="@string/customdialog"
        app:layout_constraintBottom_toTopOf="@+id/loginradiogrp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toEndOf="@+id/loginemail"
        app:layout_constraintTop_toTopOf="@+id/loginemail"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <TextView
        android:id="@+id/disp"
        android:layout_width="276dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>