<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03AEFB"
    tools:context=".Registrationpage">

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="228dp"
        android:layout_height="41dp"
        android:background="#04DFFB"
        android:onClick="@string/customdialog"
        android:text="@string/Create_Account"
        android:textAllCaps="false"
        android:textColor="#03A9F4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="357dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/Full_Name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#020202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age"
        android:layout_width="353dp"
        android:layout_height="67dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Age"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#020202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="288dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/Phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <EditText
        android:id="@+id/email"
        android:layout_width="357dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="266dp"
        android:layout_height="51dp"
        android:layout_marginBottom="56dp"
        android:textColor="#F40303"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnknownId" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="731dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="317dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address">

        <RadioButton
            android:id="@+id/radioshopkeeper"
            android:layout_width="170dp"
            android:layout_height="62dp"
            android:checked="false"
            android:text="@string/Shopkeeper"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radiocustomer"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:checked="false"
            android:text="@string/Customer"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/otpsend"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:onClick="@string/customdialog"
        app:layout_constraintBottom_toBottomOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/phone"
        app:layout_constraintTop_toTopOf="@+id/phone"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <EditText
        android:id="@+id/address"
        android:layout_width="358dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Address"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/Sendotp"
        android:textColor="#F44336"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/phone" />

</androidx.constraintlayout.widget.ConstraintLayout>